--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <body>
     <!-- HOME PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
     <main>
         <h1>H-Thai-ML</h1>
