--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <ul>
             <li>
                 <a href="index.html">Home</a>
+                <a href="menu.html">Menu</a>
+                <a href="about.html">About</a>
             </li>
         </ul>
     </nav>
