--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <a href="index.html">Home</a>
                 <a href="menu.html">Menu</a>
                 <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
             </li>
         </ul>
     </nav>
