changes to my index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         </ul>
     </nav>
     <!-- TODO: Banner Image here-->
+    nav {
+        width: 100%;
+    }
     <main>
         <h1>H-Thai-ML</h1>
         <!-- TODO: Home page code here-->
