--- a/index.html
+++ b/index.html
@@ -3,29 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>H-Thai-ML</title>
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <title>Document</title>
 </head>
 <body>
-    <!-- HOME PAGE -->
-    <!-- TODO: Navbar here -->
-    <nav>
-        <ul>
-            <li>
-                <a href="index.html">Home</a>
-                <a href="menu.html">Menu</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
-            </li>
-        </ul>
-    </nav>
-    <!-- TODO: Banner Image here-->
-    nav {
-        width: 100%;
-    }
-    <main>
-        <h1>H-Thai-ML</h1>
-        <!-- TODO: Home page code here-->
-    </main>
+    <p>
+        H<sub>2</sub>0
+    </p>
 </body>
 </html>
