--- a/about.html
+++ b/about.html
@@ -4,14 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- ABOUT PAGE -->
-    <!-- TODO: Navbar here -->
-    <!-- TODO: Banner Image here-->
+       <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <div>
+        <img src="./assets/images/banner.png" alt="banner">
+    </div>
     <main>
         <!-- About page code here -->
+        <h1>About Us</h1>
+        <h2>Locations</h2>
+            <ul>
+                <li>San Diego, California</li>
+                <li>Tucson, Arizona</li>
+                <li>Boston, Massachusetts</li>
+                <li>Nashville, Tennessee</li>
+            </ul>
+        <h2>Origin Story</h2>
+    <div>
+        <img src="./assets/images/about.jpg">
+    </div>   
+    <p>In the heart of Tucson, Arizona, nestled amidst the vibrant desert landscape, there once lived a woman named Pim. With a passion for culinary exploration and a dream of sharing the rich flavors of her homeland, Thailand, she embarked on a journey that led to the opening of "Sawasdee Sizzle," a Thai restaurant that ignited taste buds and warmed hearts.</p>
     </main>
 </body>
 </html>
