--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link 
+    rel="stylesheet" 
+    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+    crossorigin="anonymous"/>
 </head>
 <body>
     <!-- CONTACT PAGE -->
-    <!-- TODO: Navbar here -->
-    <!-- TODO: Banner Image here-->
+        <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <div>
+        <img src="./assets/images/banner.png" alt="banner">
+    </div>
     <main>
         <h2>Hours of Operation</h2>
         <p>
@@ -20,7 +42,13 @@
         </p>
         <h2>Contact Info</h2>
         <p>
-            <strong>Phone Number:</strong> TBD
+            <strong> <i class="fa fa-phone" aria-hidden="true"></i></strong> 5208881234
+        </p>
+        <p>
+            <strong><i class="fa fa-envelope" aria-hidden="true"></i></strong> 1234 Grant Rd
+        </p>
+        <p>
+            <strong><i class="fa fa-map-marker" aria-hidden="true"></i></strong> HThaiMl@Restauant.com
         </p>
     </main>
 </body>
